@@ -230,7 +230,7 @@ free-redefines-position:		warning
 record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		ok
-missing-statement:			error
+missing-statement:			warning
 zero-length-literals:			ok
 xml-generate:				ok
 xml-generate-extra-phrases:		ok
